# flutter_windows_cv_toolbox

./: README.md
flutter_cv/: LICENSE  README.md  changelog.md  pubspec.yaml
flutter_cv/example/: pubspec.yaml
flutter_cv/example/lib/: blur.dart  inpaint.dart  low_poly.dart  main.dart  simple_camera.dart  simple_use.dart  utils.dart  yolo.dart
flutter_cv/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_cv/lib/: camera.dart  constants.dart  cv.dart  flutter_cv.dart  lib.dart  model.dart
flutter_cv/lib/typedefs/: c_function.dart  dart_function.dart
flutter_cv/lib/typedefs/interesting_use/: c_function.dart  dart_function.dart
flutter_cv/lib/typedefs/simple_use/: c_function.dart  dart_function.dart  struct.dart
flutter_cv/lib/widgets/: camera_widget.dart  inpaint_board.dart  widgets.dart
opencv_tools/: README.md  pubspec.yaml
opencv_tools/example/: README.md  pubspec.yaml
opencv_tools/example/lib/: main.dart
opencv_tools/example/windows/: CMakeLists.txt
opencv_tools/example/windows/runner/: Runner.rc  main.cpp
opencv_tools/lib/: _constants.dart  _types.dart  model.dart  tools.dart  utils.dart
opencv_tools/lib/typedefs/: c_function.dart  dart_function.dart
tests/: mask_file_test.py  py_camera_test.py
windows_dlib/: README.md  pubspec.yaml
windows_dlib/example/: README.md  pubspec.yaml
windows_dlib/example/lib/: main.dart
windows_dlib/example/test/: widget_test.dart
windows_dlib/example/windows/: CMakeLists.txt
windows_dlib/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows_dlib/example/windows/runner/: Runner.rc  main.cpp
windows_dlib/lib/: windows_dlib.dart  windows_dlib_method_channel.dart  windows_dlib_platform_interface.dart
windows_dlib/test/: windows_dlib_method_channel_test.dart  windows_dlib_test.dart
windows_dlib/windows/: CMakeLists.txt  face.cpp  simple_use.cpp  windows_dlib_plugin.cpp  windows_dlib_plugin.h  windows_dlib_plugin_c_api.cpp
windows_dlib/windows/face/: beauty.cpp
windows_dlib/windows/include/windows_dlib/: windows_dlib_plugin_c_api.h
windows_opencv/: README.md  changelog.md  pubspec.yaml
windows_opencv/example/: README.md  pubspec.yaml
windows_opencv/example/lib/: main.dart  native_opencv.dart
windows_opencv/example/windows/: CMakeLists.txt
windows_opencv/example/windows/runner/: Runner.rc  main.cpp
windows_opencv/windows/: CMakeLists.txt  blind_watermark.cpp  blind_watermark.h  cv_util.cpp  cv_util.h  fcamera.cpp  interesting_use.cpp  native_opencv.cpp  simple_use.cpp
windows_opencv/windows/tools/blind_watermark/: blind_watermark.cpp  blind_watermark.h
windows_opencv/windows/tools/camera/: camera.cpp  camera.h  readme.md
windows_opencv/windows/tools/contrast/: contrast.cpp
windows_opencv/windows/tools/cvt_color/: cvt_color.cpp  cvt_color.h
windows_opencv/windows/tools/filter/: filter.cpp
windows_opencv/windows/tools/img_blur/: image_blur.cpp
windows_opencv/windows/tools/low_poly/: low_poly.cpp
windows_opencv/windows/tools/object_detection/: yolov3.cpp  yolov3.h
windows_opencv/windows/tools/sharpen/: sharpen.cpp
